fix(editor): Fix for large notifications being cut off (#5705)
fix(editor): Fix for large notification being cut off

--- a/packages/editor-ui/src/n8n-theme.scss
+++ b/packages/editor-ui/src/n8n-theme.scss
@@ -152,6 +152,8 @@
 .el-notification__content {
 	text-align: left;
 	word-break: break-word;
+	max-height: 60vh;
+	overflow-y: auto;
 }
 
 .tags-container {
